Fix SearchBar alignment in Header

--- a/app/layout/Header.scss
+++ b/app/layout/Header.scss
@@ -44,6 +44,6 @@
 .Header-search {
   display: flex;
   flex: 1;
-  align-items: center;
+  justify-content: center;
   margin: 0 2rem;
 }
